--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -135,8 +135,8 @@ h6 {
 
 #header .logo img {
   padding: 0;
-  margin: 0;
-  max-height: 40px;
+  margin-top: 20px;
+  max-height: 100px;
 }
 
 /*--------------------------------------------------------------
