--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -135,8 +135,7 @@ h6 {
 
 #header .logo img {
   padding: 0;
-  margin-top: 20px;
-  max-height: 100px;
+  max-height: 5em;
 }
 
 /*--------------------------------------------------------------
